<resources>
    <string name="app_name">Monsters And Portals</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="name">Bitte Namen eingeben:</string>
    <string name="createServer">Server erstellen</string>
    <string name="home">Home</string>
    <string name="ip">Bitte IP-Adresse eingeben:</string>
    <string name="connectServer">Verbinden</string>
    <string name="playerOne">Player 1:</string>
    <string name="playerTwo">Player 2:</string>
    <string name="serverClose">Server schließen</string>
    <string name="disconnect">Disconnect</string>
    <string name="roll">Würfle!</string>
    <string name="anleitung">Spielanleitung</string>
</resources>
